<resources>
    <string name="app_name">Kreditimpian</string>
    <string name="title_beranda">Beranda</string>
    <string name="title_marketplace">Produk</string>
    <string name="title_simulasikredit">Simulasi Kredit</string>
    <string name="title_akun">Akun</string>
    <string name="start">Mulai</string>
    <string name="next">Lanjut</string>
    <string name="skip">Lewati</string>
    <string name="strike_text"> <strike>Harga Asli</strike> </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="capture">Capture</string>
    <string name="camera_not_supported">Your Device doesn\\\'t Support Camera.</string>
    <string name="capture_image_failed">Failed to capture image.</string>
    <string name="permission_message">Both permissions are required. Please allow both permission to take picture.</string>
    <string name="cancel_message">Cancelled by user.</string>
    <string name="capture_deny_message">Capture image won\'t work without both permissions.</string>
    <string name="toast_pick_file_error">Unable to pick file. Check status of file manager.</string>
    <string-array name="jeniskelamin">
        <item>Pilih Jenis Kelamin</item>
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>
    <string-array name="logistic">
        <item>Pilih Logistic</item>
        <item>JNE</item>
        <item>POS</item>
        <item>JNT</item>
        <item>TIKI</item>
    </string-array>
    <string-array name="tenorList">
        <item>Pilih Tenor</item>
        <item>3 x Rp.3.000.000</item>
        <item>6 x Rp. 6.000.000</item>
        <item>9 x Rp. 9.000.000</item>
        <item>12 x Rp. 12.000.000</item>
    </string-array>
    <string-array name="status">
        <item>Pilih Status</item>
        <item>Lajang</item>
        <item>Kawin</item>
        <item>Janda</item>
        <item>Duda</item>
    </string-array>
    <string-array name="agama">
        <item>Pilih Agama</item>
        <item>Islam</item>
        <item>Kristen</item>
        <item>Katolik</item>
        <item>Hindu</item>
        <item>Budha</item>
    </string-array>
    <string-array name="kredit">
        <item>Apakah Anda memiliki kredit/cicilan</item>
        <item>Ya</item>
        <item>Tidak</item>
    </string-array>
    <string-array name="statusrumah">
        <item>Status tempat tinggal</item>
        <item>Ikut Orang tua</item>
        <item>Rumah Sendiri</item>
        <item>Kost</item>
        <item>Kontrak</item>
    </string-array>
    <string-array name="kota">
        <item>- Pilih Kota -</item>
    </string-array>
    <string-array name="kecamatan">
        <item>- Pilih Kecamatan -</item>
    </string-array>
    <string-array name="tahunkendaraan">
        <item>Pilih Tahun Kendaraan</item>
    </string-array>
    <string-array name="kategori">
        <item>Pilih Kategori</item>
    </string-array>
    <string-array name="tenor">
        <item>6 bulan</item>
        <item>9 bulan</item>
        <item>12 bulan</item>
        <item>18 bulan</item>
        <item>24 bulan</item>
    </string-array>
    <string-array name="uangmuka">
        <item>10%</item>
        <item>15%</item>
        <item>20%</item>
        <item>25%</item>
        <item>30%</item>
        <item>35%</item>
        <item>40%</item>
        <item>45%</item>
    </string-array>
    <string name="title_activity_upgrade_impian">Upgrade Impian</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="jumlah_pinjaman">Jumlah Pinjaman</string>
    <string name="harga_kendaraan">Harga Kendaraan</string>
    <string name="image">image</string>
    <string name="lokasi">Lokasi</string>
    <string name="ajukan_sekarang">Ajukan Sekarang</string>
    <string name="asuransi">Asuransi</string>
    <string name="jmlhpinjkosong">Jumlah pinjaman tidak boleh kosong</string>
    <string name="hrgkendkosong">Harga kendaraan tidak boleh kosong</string>
    <string name="lokasikosong">Silahkan isi kota anda tinggal</string>
    <string name="asuransikosong">Masukkan asuransi yang diinginkan</string>
    <string name="pilih">Pilih</string>
    <string name="jmlhpinjvalue">Jumlah Pinjaman : %1$s</string>
    <string name="hrgkendvalue">Harga Kendaraan: %1$s</string>
    <string name="kendaraan">Kendaraan : %1$s</string>
    <string name="merkkendvalue">Merk Kendaraan: %1$s</string>
    <string name="tipekendvalue">Tipe Kendaraan: %1$s</string>
    <string name="thnkendvalue">Tahun Kendaraan: %1$s</string>
    <string name="asuransivalue">Asuransi: %1$s</string>
    <string name="resultpilihleasing">%1$s Status menunggu persetujuan admin</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="sumber_pesanan_optional">Sumber Pesanan (Optional)</string>
    <string name="deskripsi_pesanan">Deskripsi Pesanan</string>
    <string name="ket1sukses">Yeay, pengajuan Anda sudah kami terima. Tunggu proses dari kami ya.</string>
    <string name="ket2sukses">Proses memerlukan waktu 1x24 jam</string>
    <string name="selesai">Selesai</string>
    <string name="namaprodukkosong">Nama Produk tidak boleh kosong</string>
    <string name="deskripsikosong">Deskripsi tidak boleh kosong</string>
    <string name="username">Username Anda</string>
    <string name="password">Password Anda</string>
    <string name="cicilan">Cicilan :</string>
    <string name="downpayment">Downpayment :</string>
    <string-array name="mitra">
        <item>Adira</item>
        <item>Baff</item>
    </string-array>
    <string name="jasapengriman">Jasa Pengiriman :</string>
    <string name="biayakirim">Biaya kirim :</string>
    <string name="nomorinvoice">Nomor Invoice :</string>
    <string name="totalpembayaran">Total Pembayaran :</string>
    <string name="ket1multiguna">Silahkan klik gambar dibawah ini untuk unggah foto BPKP</string>
    <string-array name="listMerkMotor">
        <item>HONDA</item>
        <item>KAWASAKI</item>
        <item>PIAGGIO</item>
        <item>SUZUKI</item>
        <item>YAMAHA</item>
    </string-array>
</resources>