<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/dots_margin_bottom"
    android:layout_marginEnd="@dimen/dots_margin_bottom"
    tools:context=".FormPengajuan.SuccessMengajukan">

    <ImageView
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/placeholderImage"
        android:contentDescription="@string/image"
        android:src="@drawable/succes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dots_margin_bottom"
        android:fontFamily="@font/jipatharegular"
        android:gravity="center"
        android:text="@string/ket1sukses"
        android:textColor="#000"
        android:textSize="@dimen/tulisan30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout1" />

    <TextView
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jipatharegular"
        android:gravity="center"
        android:paddingTop="0dp"
        android:text="@string/ket2sukses"
        android:textColor="#000"
        android:textSize="@dimen/tulisan30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout2" />

    <!--Button-->
    <Button
        android:id="@+id/btnSelesai"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/btnorange"
        android:text="@string/selesai"
        android:textColor="#fff"
        android:textSize="@dimen/tulisan18sp"
        app:layout_constraintTop_toBottomOf="@+id/layout3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>