<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:theme="@style/AppTheme.NoActionBar"
    tools:context=".FormPengajuan.StepIsiCariProduct">

    <include
        android:id="@+id/includeToolbar"
        layout="@layout/toolbar_static"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen0dp"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/text_margin"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/includeToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen0dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtnamaproduk"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/jipatharegular"
                    android:hint="@string/nama_produk"
                    android:inputType="text"
                    android:textSize="@dimen/tulisan26sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout1">

                <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
                    android:id="@+id/spinKategori"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen3dp"
                    android:layout_marginEnd="@dimen/dimen3dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:smsp_floatingLabelText=""
                    app:smsp_hint="Kategori"
                    app:smsp_hintColor="@color/colorOrange"
                    app:smsp_itemColor="@color/colorOrange"
                    app:smsp_itemListColor="@color/colorOrange"
                    app:smsp_itemListHintBackgroundColor="@color/colorOrange"
                    app:smsp_itemListHintColor="@android:color/white"
                    app:smsp_multilineError="false"
                    app:smsp_selectedItemListColor="#FF5252"
                    app:smsp_underlineColor="@color/colorOrange" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_10"
                android:theme="@style/TextLabel"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtsumberpesanan"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/jipatharegular"
                    android:hint="@string/sumber_pesanan_optional"
                    android:inputType="text"
                    android:textSize="@dimen/tulisan26sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:background="@drawable/borderorange"
                app:hintEnabled="false"
                android:theme="@style/TextLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtdeskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/jipatharegular"
                    android:gravity="top"
                    android:hint="@string/deskripsi_pesanan"
                    android:inputType="textMultiLine"
                    android:lines="9"
                    android:textSize="@dimen/tulisan26sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnAjukansekarang"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/btnorange"
                android:fontFamily="@font/jipatharegular"
                android:text="@string/ajukan_sekarang"
                android:textColor="#fff"
                android:textSize="@dimen/tulisan26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout4" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <!--<FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


    <LinearLayout
        android:id="@+id/linera1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="0dp"
        tools:ignore="MissingConstraints">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat"
            tools:ignore="MissingConstraints">

            <ImageButton
                android:id="@+id/btnback"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_toLeftOf="@id/btnback"
                android:background="@android:color/transparent"
                android:src="@drawable/backwhite"/>

            <ImageView
                android:id="@+id/logotop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foregroundGravity="center"
                android:layout_toRightOf="@id/btnback"
                android:paddingRight="50dp"
                android:paddingBottom="10dp"
                android:paddingTop="15dp"
                android:src="@drawable/logoputihkredit"/>
        </androidx.appcompat.widget.Toolbar>

        <androidx.core.widget.NestedScrollView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:id="@+id/linera2"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:visibility="gone"
                    android:fontFamily="@font/jipatharegular"
                    android:textSize="40dp"
                    android:paddingBottom="10dp"
                    android:textColor="#000"
                    android:src="@drawable/step1"/>




                &lt;!&ndash;Border&ndash;&gt;
                <LinearLayout
                    android:background="#fff"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"></LinearLayout>


                <LinearLayout

                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:background="@drawable/borderhitam"
                    android:layout_height="37dp">

                    <EditText
                        android:id="@+id/txtnamaproduk"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@android:color/transparent"
                        android:hint="Nama Produk"
                        android:inputType="text"
                        android:fontFamily="@font/jipatharegular"
                        android:textSize="26dp" />

                </LinearLayout>


                &lt;!&ndash;Border&ndash;&gt;
                <LinearLayout
                    android:background="#fff"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"></LinearLayout>


                <LinearLayout

                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:background="@drawable/borderhitam"
                    android:layout_height="37dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:background="@drawable/borderhitam"
                        android:layout_height="37dp">

                        <Spinner
                            android:id="@+id/spinnerprovinsi_kategori"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:entries="@array/kategori"></Spinner>
                    </LinearLayout>

                </LinearLayout>

                &lt;!&ndash;Border&ndash;&gt;
                <LinearLayout
                    android:background="#fff"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"></LinearLayout>


                <LinearLayout

                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:background="@drawable/borderhitam"
                    android:layout_height="37dp">

                    <EditText
                        android:id="@+id/txtsumberpesanan"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@android:color/transparent"
                        android:hint="Sumber Pesanan (Optional)"
                        android:inputType="text"
                        android:fontFamily="@font/jipatharegular"
                        android:textSize="26dp" />

                </LinearLayout>

                &lt;!&ndash;Border&ndash;&gt;
                <LinearLayout
                    android:background="#fff"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"></LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:background="@drawable/borderhitam"
                    android:layout_height="120dp">

                    <EditText
                        android:id="@+id/txtdeskripsi"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@android:color/transparent"
                        android:hint="Deskripsi Pesanan"
                        android:gravity="top"
                        android:lines="9"
                        android:inputType="textMultiLine"
                        android:fontFamily="@font/jipatharegular"
                        android:textSize="26dp" />

                </LinearLayout>


&lt;!&ndash;
                &lt;!&ndash;Border&ndash;&gt;
                <LinearLayout
                    android:background="#fff"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"></LinearLayout>


                <ImageView
                    android:id="@+id/imagefoto"
                    android:paddingBottom="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
&ndash;&gt;


                &lt;!&ndash;Border&ndash;&gt;
                <LinearLayout
                    android:background="#fff"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"></LinearLayout>


                <Button
                    android:id="@+id/btnAjukansekarang"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:text="Ajukan Sekarang"
                    android:textStyle="bold"
                    android:textColor="#fff"
                    android:fontFamily="@font/jipatharegular"
                    android:textSize="25dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/btnorange"
                    ></Button>



            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
-->


</androidx.constraintlayout.widget.ConstraintLayout>